Fix the resource alignment in package read

--- a/ckanext/classification/fanstatic/css/main.css
+++ b/ckanext/classification/fanstatic/css/main.css
@@ -17,3 +17,7 @@
 .classification_5 { 
   background-color: #ff3300; 
 }
+
+.heading {
+  margin-left: 35px;
+}
